docs: record VirtualThreadDecoderThroughputBenchmark trusted-run result
Trusted CI run (poolSize=8, concurrency 8/32/128, 3 forks, -Djdk.tracePinnedThreads=full):
tied throughput at every concurrency level (platform 810-837 ops/s vs virtual 804-826 ops/s,
within the ~30% error bars on both sides), ~45-48% more allocation for the virtual-thread
variant (28.2-28.7 KB/op vs 19.2-19.4 KB/op) with correspondingly more GC activity, and zero
jdk.VirtualThreadPinned events across all six profile.jfr recordings (verified via
'jfr print --events jdk.VirtualThreadPinned' against each file).

Verdict: confirmed Loom-friendly (no pinning), but not adopted as a default - at matched
admission-gated concurrency the implementation trades a real, measured allocation/GC cost for
no throughput benefit. The scenario where virtual threads could still plausibly help (logical
concurrency swept past the platform-thread-pool size, test matrix C from the reviewed hints
doc) was not run - left as a follow-up, not started because nothing in this result motivates it.

Updates ROADMAP.md's Phase 11 PR5 entry (top summary line + full trusted-run writeup replacing
the 'not yet run on trusted CI' placeholder) and connection-pooling.md's
decoderUseVirtualThreads section with the same result.